# Aleph

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  LANGUAGE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
book/: Manifest.md
book/SetTheory/: EmptySet.md  Extensionality.md  Pair.md  Subset.md  Union.md
tests/: test_e2e.py  test_extractor.py  test_formatter.py  test_import_collisions.py  test_inference.py  test_manifest.py  test_parser.py  test_unification.py  test_wildcard.py
tools/: __init__.py  __main__.py  cli.py  common.py  context.py  formatter.py
tools/inference/: __init__.py  core.py  definitions.py  equality.py  propositional.py  quantifier.py  references.py
tools/parser/: __init__.py  ast_nodes.py  ast_transformer.py  ast_utils.py  extractor.py  fol_parser.py  grammar.lark
tools/verifier/: __init__.py  manifest.py  section.py  verifier.py
